add new endpoint to list stored schemas
